--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,14 +3,18 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <!-- mapsforge and probably graphhopper for OSMReader later -->
+    <!-- mapsforge cache  -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <!-- ONLY necessary if you want to use graphhopper web service -->
+    <uses-permission android:name="android.permission.INTERNET" /> 
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="17" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"        
         android:theme="@style/AppTheme" >
