--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-         
-         
-         
-    <!-- TODO maven does not create a proper apk with this pom, not sure yet why! -->
-         
-         
-         
-         
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.graphhopper</groupId>
     <artifactId>graphhopper-android</artifactId>
@@ -26,18 +18,21 @@
         using -Dandroid.sdk.path=... or by setting environment variable ANDROID_HOME
         https://github.com/rgladwell/m2e-android/issues/52 -->
     </properties>
-    <dependencies>
+    <dependencies>          
+        <!-- run scripts/maven-install-mapsforge.sh 
+             if we would use system dep it doesn't work (classnotfound)-->              
         <dependency>
             <groupId>org.mapsforge</groupId>
             <artifactId>mapsforge</artifactId>
             <version>0.3.1-SNAPSHOT</version>	                                                
-            <scope>system</scope>
-            <systemPath>${basedir}/libs/mapsforge-map-0.3.1-SNAPSHOT-jar-with-dependencies.jar</systemPath>
-        </dependency>
+            <type>jar</type>            
+        </dependency>        
+        
         <dependency>
             <groupId>com.graphhopper</groupId>
             <artifactId>graphhopper</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.1-SNAPSHOT</version>            
+            <type>jar</type>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -52,12 +47,15 @@
                     <artifactId>log4j</artifactId>                    
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>        
+        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-android</artifactId>
-            <version>1.6.1-RC1</version>	                                                
-        </dependency>
+            <version>1.6.1-RC1</version>
+            <type>jar</type>
+        </dependency>        
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -66,12 +64,14 @@
         </dependency>
 
         <!-- Make sure this is above (!) the android dependencies -->
+        <!--
         <dependency>
             <groupId>com.pivotallabs</groupId>
             <artifactId>robolectric</artifactId>
             <version>1.1</version>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>android</groupId>
             <artifactId>android</artifactId>
@@ -82,14 +82,14 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src</sourceDirectory>
-        <finalName>${project.artifactId}</finalName>
+        <sourceDirectory>src</sourceDirectory>        
+        <finalName>${project.artifactId}</finalName>        
 
         <plugins>
             <!-- to avoid problems with jvm 1.5 and @Override -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -104,28 +104,17 @@
                 <!-- See http://code.google.com/p/maven-android-plugin/ -->
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>3.3.2</version>
+                <extensions>true</extensions>
                 <configuration>
                     <sdk>
                         <!-- platform or api level (api level 8 = platform 2.2) -->                        
                         <platform>8</platform>
                     </sdk>
-                </configuration>
-                <extensions>true</extensions>
-            </plugin>
-            <!--
-                use
-                mvn -DskipTests=true clean install android:deploy android:run
-                TODO specifying a specific activity is not possible but necessary as we use custom package names for different deployments
-            <plugin>
-                <artifactId>exec-maven-plugin</artifactId>
-                <groupId>org.codehaus.mojo</groupId>
-                <version>1.2.1</version>
-                <configuration>
-                    <executable>${basedir}/scripts/run_app.sh</executable>
-                </configuration>
-            </plugin>
-            -->
+                    <deleteConflictingFiles>true</deleteConflictingFiles>
+                    <undeployBeforeDeploy>true</undeployBeforeDeploy>
+                </configuration>                
+            </plugin>            
         </plugins>
     </build>
     <repositories>
