--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@
     </properties>
     <dependencies>          
         <!-- run scripts/maven-install-mapsforge.sh 
-             if we would use system dep it doesn't work (classnotfound)-->              
+        if we would use system dep it doesn't work (classnotfound)-->              
         <dependency>
             <groupId>org.mapsforge</groupId>
             <artifactId>mapsforge</artifactId>
             <version>0.3.1-SNAPSHOT</version>	                                                
             <type>jar</type>            
-        </dependency>        
+        </dependency>
         
         <dependency>
             <groupId>com.graphhopper</groupId>
@@ -82,6 +82,10 @@
     </dependencies>
 
     <build>
+        <!-- 
+        1. Use src/test/java for JUnit tests that don't call any Android APIs (directly or transitively)
+        2. Use src/main/java for JUnit tests that call Android APIs  
+        -->
         <sourceDirectory>src</sourceDirectory>        
         <finalName>${project.artifactId}</finalName>        
 
@@ -117,14 +121,4 @@
             </plugin>            
         </plugins>
     </build>
-    <repositories>
-        <!--
-        <repository>
-        <id>sonatype</id>
-        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        <snapshots>
-                                        <enabled>true</enabled>
-        </snapshots>
-        </repository> -->
-    </repositories>
 </project>
